Added Diffusion Drive.

--- a/bibliography_custom.bib
+++ b/bibliography_custom.bib
@@ -498,3 +498,11 @@ End-to-End Autonomous Driving},
   booktitle    = NEURIPS,
   year         = {2022}
 }
+
+@inproceedings{Liao2025CVPR,
+  author       = {Bencheng Liao and Shaoyu Chen and Haoran Yin and Bo Jiang and Cheng Wang and Sixu Yan and Xinbang Zhang and Xiangyu Li and Ying Zhang and Qian Zhang and Xinggang Wang},
+  title        = {DiffusionDrive: Truncated Diffusion Model for End-to-End Autonomous Driving},
+  booktitle    = CVPR,
+  year         = {2025}
+}
+
