--- a/main.tex
+++ b/main.tex
@@ -86,6 +86,7 @@ VL~\cite{Arasteh2025ICRA} & 73.29 & 65.44 & 2025 & ICRA \\
 Hydra-NeXt~\cite{Li2025ARXIV} & 73.86 & 50.00 & 2025 & - \\
 DriveMoE~\cite{Yang2025ARXIV} & 74.22 & 48.64 & 2025 & - \\
 ETA~\cite{Hamdan2025ICCV} & 74.33 & 48.33 & 2025 & ICCV \\
+DiffusionDrive-temp~\cite{Liao2025CVPR} & 77.68 & 52.72 & 2025 & CVPR \\
 ORION~\cite{Fu2025ICCV} & 77.74 & 54.62 & 2025 & ICCV \\
 PGS~\cite{Huang2025NEURIPS} & 78.08 & 48.64 & 2025 & NeurIPS \\
 GaussianFusion~\cite{Liu2025NEURIPS} & 79.1 & 54.4 & 2025 & NeurIPS \\
