--- a/bibliography_custom.bib
+++ b/bibliography_custom.bib
@@ -506,3 +506,11 @@ End-to-End Autonomous Driving},
   year         = {2025}
 }
 
+@article{Tang2025ARXIV,
+  author       = {Jiacheng Tang and Mingyue Feng and Jiachao Liu and Yaonong Wang and Jian Pu},
+  title        = {Decoupling Scene Perception and Ego Status: A Multi-Context Fusion Approach for Enhanced Generalization in End-to-End Autonomous Driving},
+  journal      = ARXIV,
+  volume       = {2511.13079},
+  year         = {2025},
+}
+
