--- a/main.tex
+++ b/main.tex
@@ -59,6 +59,7 @@ FocalAD~\cite{Sun2025ARXIV} & 45.77 & 17.30 & 2025 & - \\
 UniAD~\cite{Hu2023CVPR} & 45.81 & 16.36 & 2023 & CVPR \\
 MomAD~\cite{Song2025CVPR} & 47.91 & 18.11 & 2025 & CVPR \\
 CogAD~\cite{Wang2025ARXIV} & 48.30 & 24.00 & 2025 & - \\
+AdaptiveAD~\cite{Tang2025ARXIV} & 49.47 & 19.23 & 2025 & - \\
 BridgeAD~\cite{Zhang2025CVPR} & 50.06 & 22.73 & 2025 & CVPR \\
 E³AD~\cite{Niu2025ARXIV} & 50.07 & 20.12 & 2025 & - \\
 X-Driver~\cite{Liu2025ARXIVb} & 51.7 & 18.1 & 2025 & - \\
