--- a/bibliography_custom.bib
+++ b/bibliography_custom.bib
@@ -514,3 +514,12 @@ End-to-End Autonomous Driving},
   year         = {2025},
 }
 
+@article{Yin2025ARXIV,
+  author       = {Liuhan Yin and Runkun Ju and Guodong Guo and Erkang Cheng},
+  title        = {DiffRefiner: Coarse to Fine Trajectory Planning via Diffusion Refinement with Semantic Interaction for End to End Autonomous Driving},
+  journal      = ARXIV,
+  volume       = {2511.17150},
+  year         = {2025},
+}
+
+
