--- a/main.tex
+++ b/main.tex
@@ -96,6 +96,7 @@ SimLingo~\cite{Renz2025CVPR} & 85.07 & 67.27 & 2025 & CVPR \\
 R2SE~\cite{Liu2025ARXIV} & 86.28 & 69.54 & 2025 & - \\
 HiP-AD~\cite{Tang2025ICCV} & 86.77 & 69.09 & 2025 & ICCV \\
 BridgeDrive~\cite{Liu2025ARXIVd} & 86.87 & 72.27 & 2025 & - \\
+DiffRefiner~\cite{Yin2025ARXIV} & 87.1 & 71.4 & 2025 & - \\
 \midrule
 \textit{Think2Drive}~\cite{Li2024ECCV} & \textit{91.85} & \textit{85.41} & 2024 & ECCV \\
 \textit{PDM-Lite}~\cite{Sima2024ECCV} & \textit{97.02} & \textit{92.27} & 2024 & ECCV \\
