--- a/bibliography_custom.bib
+++ b/bibliography_custom.bib
@@ -530,3 +530,11 @@ End-to-End Autonomous Driving},
   year         = {2025},
 }
 
+@article{Jiang2025ARXIV,
+  author       = {Haowen Jiang and Xinyu Huang and You Lu and Dingji Wang and Yuheng Cao and Chaofeng Sha and Bihuan Chen and Keyu Chen and Xin Peng},
+  title        = {ExpertAD: Enhancing Autonomous Driving Systems with Mixture of Experts},
+  journal      = ARXIV,
+  volume       = {2511.11740},
+  year         = {2025},
+}
+
