--- a/main.tex
+++ b/main.tex
@@ -91,6 +91,7 @@ GuideFlow~\cite{Liu2025ARXIVe} & 75.21 & 51.36 & 2025 & - \\
 DiffusionDrive-temp~\cite{Liao2025CVPR} & 77.68 & 52.72 & 2025 & CVPR \\
 ORION~\cite{Fu2025ICCV} & 77.74 & 54.62 & 2025 & ICCV \\
 PGS~\cite{Huang2025NEURIPS} & 78.08 & 48.64 & 2025 & NeurIPS \\
+Expert-VADv2~\cite{Jiang2025ARXIV} & 78.18 & 58.34 & 2025 & - \\
 GaussianFusion~\cite{Liu2025NEURIPS} & 79.1 & 54.4 & 2025 & NeurIPS \\
 TF++~\cite{Zimmerlin2024ArXiv} & 84.21 & 67.27 & 2024 & - \\
 SimLingo~\cite{Renz2025CVPR} & 85.07 & 67.27 & 2025 & CVPR \\
